[package]
name = "csharpier-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.5"
clap = { version = "4.3.0", features = ["derive"] }
dotenv = "0.15.0"
futures-util = "0.3.29"
log = "0.4.17"
simplelog = "0.12.1"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
tower-lsp = "0.19.0"
